<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/restaurant"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.gatech.seclass.prj2.ViewCustomerActivity" >
    <Button
        android:id="@+id/viewCustomerHomeBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Home"
        android:onClick="goHome"/>

    <Button
        android:id="@+id/viewCustomerTransactions"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/viewCustomerHomeBtn"
        android:layout_alignLeft="@+id/viewCustomerHomeBtn"
        android:onClick="viewCustomerTransactions"
        android:text="@string/ViewCustomerTransactions" />

    <Button
        android:id="@+id/modifyCustomer"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/viewCustomerTransactions"
        android:layout_alignLeft="@+id/viewCustomerTransactions"
        android:onClick="modifyCustomer"
        android:text="@string/ModifyCustomer" />

    <TextView
        android:id="@+id/ctTextViewDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/ViewCustomer"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ctTextViewDateLabel"
        android:layout_marginLeft="18dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/firstNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/FirstName" />

            <TextView
                android:id="@+id/viewFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lastNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/LastName" />

            <TextView
                android:id="@+id/viewLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/emailAddressLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/EmailAddress" />

            <TextView
                android:id="@+id/viewEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/zipcodeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/Zipcode" />

            <TextView
                android:id="@+id/viewZipcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/rewardAmountLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/RewardAmount" />

            <TextView
                android:id="@+id/viewRewardAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/goldStatusLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/GoldStatus" />

            <TextView
                android:id="@+id/viewGoldStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/yearlyTotalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/YearlyTotal" />

            <TextView
                android:id="@+id/viewYearlyTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp" />
        </TableRow>
    </TableLayout>

</RelativeLayout>
