<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/restaurant"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/mainCustomerSearch"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:onClick="goSearchCustomer"
            android:text="@string/CustomerSearch" />

        <Button
            android:id="@+id/mainViewAllTrans"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="goViewTransactions"
            android:text="@string/ViewAllTransactions" />

        <Button
            android:id="@+id/mainCreateCustomer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="goCreateCustomer"
            android:text="@string/CreateCustomer" />

        <Button
            android:id="@+id/mainCreateTrans"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="goCreateTransaction"
            android:text="@string/CreateTransaction" />
    </LinearLayout>

    <TextView
        android:id="@+id/mainErrorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="97dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>