<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/restaurant"
    android:orientation="vertical"
    tools:context="edu.gatech.seclass.prj2.ViewCustomerTransactions" >

 <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    
    <Button
        android:id="@+id/homeButton"
        android:text="Done" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:onClick="handleHomeClick" />
      <TextView
        android:id="@+id/customerId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Customer"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"/> 
    <TableLayout
        android:id="@+id/view_transactions_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ctTextViewDateLabel"
        android:layout_centerHorizontal="true" 
        android:stretchColumns="1"
        android:shrinkColumns="0" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ct_DateLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:height="20sp"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/TransactionTableDateHeader" />
            <TextView
                android:id="@+id/ct_AmountStatusLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:height="20sp"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/TransactionTableAmountHeader" />
            <TextView
                android:id="@+id/ct_GoldLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:height="20sp"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/TransactionTableGoldHeader" />
            <TextView
                android:id="@+id/ct_RewardAppliedLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:height="20sp"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/TransactionTableRewardHeader" />
        </TableRow>

    </TableLayout>
      <ListView
            android:id="@android:id/list"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent">
        </ListView>
 </LinearLayout>



</RelativeLayout>